--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>My Study Station</title>
 <link rel="stylesheet" href="style.css">
+<meta name="google-site-verification" content="gZRwn7HN7Eil-sVlOrBWapGibsw1fE43Yae-7lqkccs" />
 </head>
 <body>
 
