--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Study Station</title>
 <link rel="stylesheet" href="style.css">
 <meta name="google-site-verification" content="gZRwn7HN7Eil-sVlOrBWapGibsw1fE43Yae-7lqkccs" />
