Update links and add headings in index.html

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
 </header>
 
 <div class="row">
-<a href="https://aktu.ac.in/" target="_blank" class="box">AKTU Zone</a>
-<a href="https://whatsapp.com/channel/0029Va4dypZLikgEWv0xgQ3F" target="_blank" class="box">AKTU All Updates</a>
+<a href="https://aktu.ac.in/" target="_blank" class="box"><h2 class="heading">AKTU Zone</h2><p class="sub-heading">Results,erp & Admit card </p></a>
+<a href="https://whatsapp.com/channel/0029Va4dypZLikgEWv0xgQ3F" target="_blank" class="box"><h2 class="heading">AKTU All Updates</h2><p class="sub-heading">Circulars,News & updates</p></a>
 </div>
 
 <h2 class="aktu-banner">AKTU [B.Tech] Portal</h2>
 
 <div class="row">
-<a href="dashboard.html" class="box">Dashboard</a>
+<a href="dashboard.html" class="box">Dashboard  <span style="color:black;">(subject-wise notes)</span></a>
 <div class="box" onclick="openLink('https://drive.google.com/drive/folders/167KJ0oIziY9q-E4lC7vK-BC1h-gBtdql')">Previous Year Questions</div>
 <div class="box" onclick="openLink('https://drive.google.com/drive/folders/16YjOIn4FPOytyN653DFBTa3Vt4n5pAqV')">Latest AKTU Syllabus</div>
+<a href="quantum.html" class="box">Quantum Series</a>
 </div>
 
 <h2 class="tool-banner">AKTU Tools</h2>
