--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="row">
 <a href="calculator.html" class="box">Calculator</a>
-<div class="box" onclick="openLink('')">Pdf Tool</div>
+<a href="pdf.html" class="box">PDF Convertor</a>
 </div>
   
 <section class="about">
