Update SGPA Calculator link in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <h2 class="tool-banner">AKTU Tools</h2>
 
 <div class="row">
-<a href="calculator.html" class="box">Calculator</a>
+<a href="https://sgpa-calculator-eight.vercel.app/" target="_blank" class="box">SGPA Calculator</a>
 <a href="pdf.html" class="box">PDF Convertor</a>
 </div>
   
